--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
+    "fetch-intercept": "^2.3.1",
+    "firebase": "^8.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-icons-kit": "^1.3.1",
     "react-redux": "^7.2.1",
